# algorithm-base

./: .gitignore  CHANGELOG  README.md  roadmap.md  setup.cfg  setup.py
docker/: .pip.conf  Dockerfile  build-py37.sh  crypto.sh  gunicorn  launch.sh  nginx.conf
docker-slim/: .pip.conf  Dockerfile  build-py37-slim.sh  crond  encrypt.sh  gunicorn.cron  nginx_default.conf  sources.list
docs/cn/: abt.md  best-practice.md  calllimit.md  compress.md  config.md  crypto.md  custom-response-format.md  dbm.md  doc.md  encrypt.md  error.md  features.md  health_check.md  install.md  jenkins.md  log.md  metrics.md  monitoring.md  new-project.md  plugin.md  redis.md  service.md  service_data.md  tables.sql  task.md  test.md  warmup.md
examples/async/: README.md
examples/async/algorithms/: demo.py
examples/async/config/: config.py  config_prod.py
examples/async/tests/: test_demo.py
examples/cache/: README.md
examples/cache/algorithms/: demo.py
examples/cache/config/: config.py
examples/cache/tests/: test_demo.py
examples/compress/: compress_demo.py
examples/data_source/: README.md
examples/data_source/algorithms/: demo.py
examples/data_source/config/: config.py  config_default.py  config_force.py  config_prod.py
examples/data_source/tests/: test_demo.py
examples/file-upload/: README.md
examples/file-upload/algorithms/: demo.py
examples/file-upload/config/: config.py  config_prod.py
examples/file-upload/tests/: test_demo.py
examples/gunicorn/: hello.py
examples/perf/: seq.py
examples/simple/: .ab  .dockerignore  README.md  build.sh
examples/simple/algorithms/: demo.py
examples/simple/config/: config.py  config_daily.py  config_local.py  config_prod.py
examples/simple/docker/: Dockerfile
examples/simple/setup/: base.txt
examples/simple/tests/: test_demo.py
ext/ab/keys/: README.md
ext/diagrams/: system.py
ext/license/: README.md  license.ab  license.py  pre.output  pre.sh  servers.conf
src/ab/: __init__.py  abt.sh
src/ab/apps/: flask.py  gunicorn.py  prometheus.py
src/ab/client/: cli.py  crypto_cli.py
src/ab/config/: __init__.py  config.py  default_config.py
src/ab/controllers/: __init__.py  algorithm.py  cache.py  data_source.py  doc.py  routing.py  task.py
tests/: config.py  config_ipv6.py  config_mysql.py  config_oracle.py  config_save_spark_log.py  config_spark2.1.py  config_sqlite.py  conftest.py  min_config.py  setup.sh
tests/api/: hive_pressure.py  spark_async.py  test_args.py  test_async_example.py  test_crypto.py  test_data.py  test_dbm.py  test_decimal_cache.py  test_delete_cache.py  test_dfs_example.py  test_encrypt_file.py  test_exception.py  test_fixture.py  test_hive_ldap.py  test_http_compress.py  test_min_config.py  test_partition.py  test_rds.py  test_response_type.py  test_sampler.py  test_spark_async.py  test_spark_example.py  test_sqlite.py  test_static.py  test_tasks.py  test_user.py
tests/backup/: test_spark_example.py
tests/resources/: data.db  text_common  text_common_json  text_common_without_crypto  text_contains_chinese
tests/utils/: env.py  gunicorn.py  model_store.py  oracle_conf.py  test_cache.py  test_dao.py  test_data_source.py  test_dfs.py  test_kerberos.py  test_user.py
(+72 files in other folders)
