[metadata]
name = ab
version = v3.3.0.2
description = Algorithm Base
long_description = file: README.md
author = fangliu, shuiniu, pengfei.wang
author_email = 704300624@qq.com
url = http://aliyun.com

[options]
setup_requires=
    setuptools>=40.0
zip_safe = False
install_requires =
    pandas>=1.2
    numpy>=1.20
    simplejson==3.17.0
    pymysql>0.6.1
    cx_Oracle==8.0.0
    # new API
    sqlalchemy==1.3.18
    redis==3.5.3
    flask==1.1.4
    markupsafe==2.0.1
    gunicorn==20.0.4
    py_eureka_client==0.7.4
    setproctitle==1.1.10
    prometheus_client==0.8.0
    requests==2.24.0
    # thrift error: AttributeError: module 'six' has no attribute 'ensure_binary'
    six==1.15.0
    Jinja2==2.11.2
    click==7.1.2
    Cython>=0.29.21
    pytest==5.4.3
    nacos-sdk-python==0.1.6
    pyyaml
test_requires =
    pytest==5.4.3
    pytest-xdist
    pytest-repeat
    pytest-timeout
# If using the setuptools-specific include_package_data argument, files specified by package_data will
# NOT be automatically added to the manifest unless they are listed in the MANIFEST.in file
# include_package_data = True

[options.entry_points]
console_scripts =
    pyab=ab.apps.gunicorn:run
    abt=ab.client.cli:cli
pytest11 = pyab_test=ab.tests.pytest_plugin
